--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,14 +3,17 @@
 #   Refer for explanation to following link:
 #   https://github.com/evilmartians/lefthook/blob/master/docs/full_guide.md
 #
-# pre-push:
-#   commands:
-#     packages-audit:
-#       tags: frontend security
-#       run: yarn audit
-#     gems-audit:
-#       tags: backend security
-#       run: bundle audit
+pre-push:
+  commands:
+    gems-audit:
+      tags: backend security
+      run: bundle audit
+    check-validates-timeliness:
+      tags: backend
+      run: ruby gitscripts/check_validates_timeliness.rb
+    # packages-audit:
+    #   tags: frontend security
+    #   run: yarn audit
 #
 # pre-commit:
 #   parallel: true
