--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,13 +4,13 @@
 #   https://github.com/evilmartians/lefthook/blob/master/docs/full_guide.md
 #
 pre-push:
-  commands:
-    gems-audit:
-      tags: backend security
-      run: bundle audit
   scripts:
     "check_validates_timeliness.rb":
       runner: ruby
+  # commands:
+  #   gems-audit:
+  #     tags: backend security
+  #     run: bundle audit
     # check-validates-timeliness:
     #   tags: backend
     #   run: ruby gitscripts/check_validates_timeliness.rb
