--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,7 +4,7 @@
 #   https://github.com/evilmartians/lefthook/blob/master/docs/full_guide.md
 #
 pre-push:
-  # parallel: true
+  parallel: true
   scripts:
     "check_validates_timeliness.rb":
       runner: ruby
