update frontend patch

--- a/co2_native_client/app.json
+++ b/co2_native_client/app.json
@@ -56,6 +56,11 @@
           }
         }
       ]
+    },
+    "extra": {
+      "eas": {
+        "projectId": "2294feeb-9a3c-4503-acb6-12dbea34da3b"
+      }
     }
   }
 }
