--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -17,7 +17,7 @@
     "@sentry/react-native": "^3.3.2",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
-    "expo": "^45.0.0",
+    "expo": "^46.0.0",
     "expo-application": "~4.1.0",
     "expo-auth-session": "~3.6.1",
     "expo-constants": "~13.1.1",
@@ -45,12 +45,12 @@
     "sentry-expo": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.1",
+    "@babel/core": "^7.18.6",
     "@babel/preset-typescript": "^7.16.7",
     "@eslint/create-config": "^0.1.2",
     "@rnx-kit/dep-check": "^1.12.17",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.11.0",
@@ -68,7 +68,7 @@
     "prettier": "^2.5.1",
     "standard-version": "^9.3.2",
     "standard-version-expo": "^1.0.3",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "private": true,
   "resolutions": {
