--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -9,26 +9,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@config-plugins/react-native-ble-plx": "^0.0.2",
-    "@notifee/react-native": "^4.1.0",
+    "@config-plugins/react-native-ble-plx": "^3.0.0",
+    "@notifee/react-native": "4.1.0",
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@reduxjs/toolkit": "^1.7.1",
-    "@sentry/react-native": "^3.3.2",
+    "@sentry/react-native": "^4.5.0",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
     "expo": "^46.0.0",
-    "expo-application": "~4.1.0",
-    "expo-auth-session": "~3.6.1",
-    "expo-constants": "~13.1.1",
-    "expo-dev-client": "~1.0.0",
-    "expo-device": "~4.2.0",
-    "expo-intent-launcher": "~10.2.0",
-    "expo-random": "~12.2.0",
-    "expo-secure-store": "~11.2.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
+    "expo-application": "~4.2.2",
+    "expo-auth-session": "~3.7.1",
+    "expo-constants": "~13.2.4",
+    "expo-dev-client": "~1.2.1",
+    "expo-device": "~4.3.0",
+    "expo-intent-launcher": "~10.3.0",
+    "expo-random": "~12.3.0",
+    "expo-secure-store": "~11.3.0",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.5",
     "react": "17.0.2",
     "react-devtools-core": "4.23.0",
     "react-dom": "17.0.2",
@@ -42,7 +42,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
-    "sentry-expo": "^4.2.0"
+    "sentry-expo": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
