--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@reduxjs/toolkit": "^1.7.1",
-    "@sentry/react-native": "^4.5.0",
+    "@sentry/react-native": "4.2.2",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
     "expo": "^46.0.0",
@@ -28,21 +28,22 @@
     "expo-secure-store": "~11.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.5",
-    "react": "17.0.2",
+    "expo-updates": "~0.14.6",
+    "react": "18.0.0",
     "react-devtools-core": "4.23.0",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
     "react-native-alert-async": "^1.0.5",
     "react-native-ble-plx": "^2.0.3",
     "react-native-create-bridge": "^2.0.1",
-    "react-native-pager-view": "5.4.25",
-    "react-native-safe-area-context": "^3.2.0",
+    "react-native-pager-view": "5.4.24",
+    "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-tab-view": "^3.1.1",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.7",
     "react-redux": "^7.2.6",
-    "sentry-expo": "^5.0.2"
+    "sentry-expo": "^5.0.2",
+    "update-browserslist-db": "^1.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -60,7 +61,6 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "eslint-plugin-react-native-a11y": "^3.2.1",
     "eslint-plugin-react-native-globals": "^0.1.2",
     "eslint-plugin-react-perf": "^3.3.1",
     "jshint": "2.13.5",
