--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -64,8 +64,9 @@
     "eslint-plugin-react-native-globals": "^0.1.2",
     "eslint-plugin-react-perf": "^3.3.1",
     "jshint": "2.13.5",
-    "metro-react-native-babel-preset": "^0.67.0",
+    "metro-react-native-babel-preset": "0.70.3",
     "prettier": "^2.5.1",
+    "react-test-renderer": "^18.2.0",
     "standard-version": "^9.3.2",
     "standard-version-expo": "^1.0.3",
     "typescript": "^4.6.3"
