--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-react-native-globals": "^0.1.2",
     "eslint-plugin-react-perf": "^3.3.1",
     "jshint": "2.13.5",
+    "latest-version": "^7.0.0",
     "metro-react-native-babel-preset": "0.72.3",
     "prettier": "^2.5.1",
     "react-test-renderer": "^18.2.0",
