--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -17,7 +17,7 @@
     "@sentry/react-native": "4.5.0",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
-    "expo": "^46.0.0",
+    "expo": "~46.0.16",
     "expo-application": "~4.2.2",
     "expo-auth-session": "~3.7.1",
     "expo-constants": "~13.2.4",
@@ -29,10 +29,10 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
-    "react": "18.2.0",
+    "react": "18.0.0",
     "react-devtools-core": "4.23.0",
     "react-dom": "18.2.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-alert-async": "^1.0.5",
     "react-native-ble-plx": "^2.0.3",
     "react-native-create-bridge": "^2.0.1",
