--- a/co2_native_client/app.json
+++ b/co2_native_client/app.json
@@ -19,7 +19,8 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "buildNumber": "1.0.22"
+      "buildNumber": "1.0.22",
+      "bundleIdentifier": "riccio.co2.client"
     },
     "android": {
       "adaptiveIcon": {
@@ -33,7 +34,8 @@
         "android.permission.BLUETOOTH_ADVERTISE",
         "android.permission.ACCESS_FINE_LOCATION",
         "android.permission.ACCESS_COARSE_LOCATION",
-        "android.hardware.bluetooth_le"
+        "android.hardware.bluetooth_le",
+        "android.permission.BLUETOOTH_CONNECT"
       ],
       "versionCode": 460010022,
       "package": "riccio.co2.client"
