--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -17,42 +17,42 @@
     "@sentry/react-native": "4.2.2",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
-    "expo": "~46.0.16",
-    "expo-application": "~4.2.2",
-    "expo-auth-session": "~3.7.1",
+    "expo": "^47.0.0",
+    "expo-application": "~5.0.1",
+    "expo-auth-session": "~3.7.2",
     "expo-cli": "^6.0.8",
-    "expo-constants": "~13.2.4",
-    "expo-dev-client": "~1.2.1",
-    "expo-device": "~4.3.0",
-    "expo-intent-launcher": "~10.3.0",
-    "expo-random": "~12.3.0",
-    "expo-secure-store": "~11.3.0",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.6",
-    "react": "18.0.0",
+    "expo-constants": "~14.0.2",
+    "expo-dev-client": "~2.0.0",
+    "expo-device": "~5.0.0",
+    "expo-intent-launcher": "~10.3.1",
+    "expo-random": "~13.0.0",
+    "expo-secure-store": "~12.0.0",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.5",
+    "react": "18.1.0",
     "react-devtools-core": "4.23.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.69.6",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-alert-async": "^1.0.5",
     "react-native-ble-plx": "^2.0.3",
     "react-native-create-bridge": "^2.0.1",
-    "react-native-pager-view": "6.0.0",
+    "react-native-pager-view": "6.0.1",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "^3.13.1",
+    "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.4",
-    "sentry-expo": "^5.0.2",
+    "sentry-expo": "~5.0.0",
     "update-browserslist-db": "^1.0.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.19.3",
     "@babel/preset-typescript": "^7.16.7",
     "@eslint/create-config": "^0.3.1",
     "@rnx-kit/dep-check": "^1.13.0",
-    "@types/react": "~18.0.0",
-    "@types/react-native": "~0.69.1",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.11.0",
