blindly apply changes from upgrade helper - incomplete (needs new arch)
https://react-native-community.github.io/upgrade-helper/?from=0.69.6&to=0.70.5

--- a/co2_native_client/ios/Podfile
+++ b/co2_native_client/ios/Podfile
@@ -20,8 +20,12 @@ target 'co2nativeclient' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    :hermes_enabled => flags[:hermes_enabled] || podfile_properties['expo.jsEngine'] == 'hermes',
+    :hermes_enabled => true,
     :fabric_enabled => flags[:fabric_enabled],
+    # Enables Flipper.
+    #
+    # Note that if you have use_frameworks! enabled, Flipper will not work and
+    # you should disable the next line.
     # An absolute path to your application root.
     :app_path => "#{Dir.pwd}/.."
   )
@@ -34,7 +38,12 @@ target 'co2nativeclient' do
   # end
 
   post_install do |installer|
-    react_native_post_install(installer)
+    react_native_post_install(
+      installer,
+      # Set `mac_catalyst_enabled` to `true` in order to apply patches
+      # necessary for Mac Catalyst builds
+      :mac_catalyst_enabled => false
+    )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
 
     # This is necessary for Xcode 14, because it signs resource bundles by default
