trying to hunt down missing new arch stuff
https://react-native-community.github.io/upgrade-helper/?from=0.68.1&to=0.69.6

--- a/co2_native_client/.gitignore
+++ b/co2_native_client/.gitignore
@@ -38,6 +38,7 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+ios/.xcode.env.local
 project.xcworkspace
 
 # Android/IntelliJ
@@ -61,6 +62,18 @@ buck-out/
 \.buckd/
 *.keystore
 !debug.keystore
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
+
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
 
 # Bundle artifacts
 *.jsbundle
