--- a/co2_native_client/ios/Podfile
+++ b/co2_native_client/ios/Podfile
@@ -26,6 +26,7 @@ target 'co2nativeclient' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
+    :flipper_configuration => FlipperConfiguration.enabled,
     # An absolute path to your application root.
     :app_path => "#{Dir.pwd}/.."
   )
