--- a/co2_native_client/ios/co2nativeclient.xcodeproj/xcshareddata/xcschemes/co2nativeclient.xcscheme
+++ b/co2_native_client/ios/co2nativeclient.xcodeproj/xcshareddata/xcschemes/co2nativeclient.xcscheme
@@ -60,6 +60,23 @@
             ReferencedContainer = "container:co2nativeclient.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "DYLD_INSERT_LIBRARIES"
+            value = "/usr/lib/libgmalloc.dylib"
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "MallocGuardEdges"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "MallocScribble"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
