FINALLY figure out problem after hours of head smashing
See:

https://github.com/dotintent/react-native-ble-plx/issues/657#issuecomment-1331204557

and https://lists.apple.com/archives/bluetooth-dev/2016/Feb/msg00018.html

--- a/co2_native_client/eas.json
+++ b/co2_native_client/eas.json
@@ -10,7 +10,9 @@
         "gradleCommand": ":app:assembleDebug"
       },
       "ios": {
-        "buildConfiguration": "Debug"
+        "buildConfiguration": "Debug",
+        "buildArtifactPaths": "ios/build/*"
+
       }
     },
     "preview": {
