change to array buildArtifactPaths

--- a/co2_native_client/eas.json
+++ b/co2_native_client/eas.json
@@ -11,7 +11,7 @@
       },
       "ios": {
         "buildConfiguration": "Debug",
-        "buildArtifactPaths": "ios/build/*"
+        "buildArtifactPaths": ["ios/build/*"]
 
       }
     },
