begin react-native-background-fetch

--- a/co2_native_client/app.json
+++ b/co2_native_client/app.json
@@ -46,7 +46,8 @@
     "plugins": [
       "@config-plugins/react-native-ble-plx",
       "@notifee/react-native",
-      "sentry-expo"
+      "sentry-expo",
+      "react-native-background-fetch"
     ],
     "hooks": {
       "postPublish": [
