--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-alert-async": "^1.0.5",
+    "react-native-background-fetch": "^4.1.7",
     "react-native-ble-plx": "^2.0.3",
     "react-native-create-bridge": "^2.0.1",
     "react-native-pager-view": "6.0.1",
