undo react-native-background-fetch, i should try the expo version first!

--- a/co2_native_client/app.json
+++ b/co2_native_client/app.json
@@ -46,8 +46,7 @@
     "plugins": [
       "@config-plugins/react-native-ble-plx",
       "@notifee/react-native",
-      "sentry-expo",
-      "react-native-background-fetch"
+      "sentry-expo"
     ],
     "hooks": {
       "postPublish": [
