--- a/co2_native_client/ios/co2nativeclient/Info.plist
+++ b/co2_native_client/ios/co2nativeclient/Info.plist
@@ -61,6 +61,7 @@
 		<string>bluetooth-central</string>
 		<string>fetch</string>
 		<string>processing</string>
+		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
