--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@reduxjs/toolkit": "^1.7.1",
-    "@CLANG_CXX_LIBRARY": "4.9.0",
+    "@sentry/react-native": "4.9.0",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
     "expo": "^47.0.8",
