fix missing plist item

--- a/co2_native_client/ios/co2nativeclient/Info.plist
+++ b/co2_native_client/ios/co2nativeclient/Info.plist
@@ -91,5 +91,9 @@
 	<string></string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	</array>
 </dict>
 </plist>
