--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -6,6 +6,7 @@
     "@babel/plugin-syntax-flow": "^7.17.12",
     "@babel/plugin-transform-react-jsx": "^7.17.12",
     "@react-google-maps/api": "^2.7.0",
+    "@react-oauth/google": "^0.6.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@sentry/react": "^7.14.1",
     "@sentry/tracing": "^7.14.1",
@@ -33,11 +34,11 @@
     "i18next": "^22.0.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.0.2",
     "react-datepicker": "^4.3.0",
     "react-dom": "^18.0.0",
-    "react-google-login": "^5.2.2",
     "react-i18next": "^12.0.0",
     "react-redux": "8.0.5",
     "react-router-bootstrap": "0.26.2",
