--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -52,7 +52,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "e2e-test": "cypress open"
+    "e2e-test-cypress": "cypress open",
+    "e2e-test-cypress-run": "cypress run",
+    "e2e-automatic-start": "start-server-and-test start http://localhost:3001 e2e-test-cypress-run"
   },
   "browserslist": {
     "production": [
@@ -71,6 +73,7 @@
     "@eslint/create-config": "^0.4.1",
     "cypress": "^12.8.1",
     "eslint": "^8.17.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1"
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "start-server-and-test": "^2.0.0"
   }
 }
