--- a/lefthook.yml
+++ b/lefthook.yml
@@ -13,6 +13,8 @@ pre-push:
       run: rspec ./spec
     test-frontend:
       run: yarn --cwd ./co2_client run test --all --watchAll=false --silent
+    # test-e2e:
+      # 
     # "check_if_new_expo_for_notifee.js":
     #   runner: node
   # commands:
