--- a/utils/package.json
+++ b/utils/package.json
@@ -6,5 +6,8 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.38",
     "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "exec-sh": "^0.4.0"
   }
 }
