--- a/lefthook.yml
+++ b/lefthook.yml
@@ -11,10 +11,10 @@ pre-push:
   commands:
     test-backend:
       run: rspec ./spec
-    test-frontend:
-      run: yarn --cwd ./co2_client run test --all --watchAll=false --silent
-    # test-e2e:
-      # 
+    test-e2e:
+      run: yarn run ts-node utils/run_e2e.ts
+    # test-frontend:
+    #   run: yarn --cwd ./co2_client run test --all --watchAll=false --silent
     # "check_if_new_expo_for_notifee.js":
     #   runner: node
   # commands:
