--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,7 +4,8 @@
 #   https://github.com/evilmartians/lefthook/blob/master/docs/full_guide.md
 #
 pre-push:
-  parallel: true
+  parallel: false
+  follow: true
   scripts:
     "remind_i18next_typescript.rb":
       runner: ruby  
