--- a/lefthook.yml
+++ b/lefthook.yml
@@ -15,7 +15,7 @@ pre-push:
       run: yarn run ts-node utils/run_e2e.ts
     check-todos:
       tags: janitorial
-      run: git grep --color "TODO" HEAD
+      run: git grep --no-pager --color "TODO" HEAD
     # test-frontend:
     #   run: yarn --cwd ./co2_client run test --all --watchAll=false --silent
     # "check_if_new_expo_for_notifee.js":
