--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -69,7 +69,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000",
+  "proxy": "http://127.0.0.1:3000/",
   "devDependencies": {
     "@eslint/create-config": "^0.4.1",
     "concurrently": "^8.2.2",
