--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,6 +43,9 @@ Style/GlobalStdStream:
 Style/ClassAndModuleChildren:
   Enabled: false
 
+Style/RedundantReturn:
+  Enabled: false
+
 AllCops:
   Exclude:
     - 'db/schema.rb'
@@ -53,6 +56,7 @@ AllCops:
     - 'bin/rake'
     - 'tmp/**/*'
     - 'co2_client/**/*'
+    - 'co2_native_client/**/*'
   NewCops: enable
   SuggestExtensions: true
 
