--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -100,6 +100,9 @@ Style/FrozenStringLiteralComment:
 Style/WordArray:
   Enabled: false
 
+Style/IfUnlessModifier:
+  Enabled: false
+
 AllCops:
   Exclude:
     - 'db/schema.rb'
