--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -77,7 +77,6 @@
     "cypress-terminal-report": "^6.0.1",
     "eslint": "^8.17.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "start-server-and-test": "^2.0.0"
+    "eslint-plugin-jsx-a11y": "^6.5.1"
   }
 }
